# pp-python-workshop

./: .gitignore  README.md  pyproject.toml  spotify.ipynb
SalesAnalysis/: SalesAnalysis.ipynb
SalesAnalysis/Sales_Data/: .LICENSE.txt
